[gd_scene load_steps=2 format=3 uid="uid://dlpndxbmsalf6"]

[ext_resource type="Script" path="res://scenes/ui/chat_input_panel.gd" id="1_a5xv1"]

[node name="ChatInputPanel" type="Control"]
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
script = ExtResource("1_a5xv1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="VBoxContainer"]
text = "Chat:"
custom_minimum_size = Vector2(0, 20)

[node name="ChatInput" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
placeholder_text = "Say something... (Press Enter to send)"
wrap_mode = 1

[node name="SendButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
text = "Send"
